--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinterest</title>
+    <title>ViLeBaRest</title>
 
+    <link rel="icon" href="./img/icon/Sem_título-removebg-preview.png">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header>
-        <h3>PirateRest</h3>
+        <div>
+            <img class="logo" src="./img/icon/Sem_título-removebg-preview.png" alt="">
+            <h3>ViLeBaRest</h3>
+        </div>
         <nav>
             <ul>
                 <li><a href="#">About</a></li>
